# nautobot-app-device-onboarding

./: .cookiecutter.json  .gitignore  .pydocstyle.ini  .readthedocs.yaml  .travis.yml  CLAUDE.md  FAQ.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: +aruba_aoscx_vc.added  +aruba_aoscx_vrf.changed  +associate_vrfs_to_prefixes.added  +fix-hidden-job.housekeeping  +hp_procurve_show_columns.fixed  +panos_sync_network_data.added  +switch_stack.added  +sync_vrf_to_prefix.added  +use_cases.documentation  167.housekeeping  176.fixed  181.added  181.changed  189.housekeeping  192.fixed  194.housekeeping  200.added  201.added  203.housekeeping  216.housekeeping  217.fixed  218.fixed  223.housekeeping  225.housekeeping  233.added  235.dependencies  238.fixed  241.added  241.fixed  243.changed  244.added  244.changed  244.fixed  249.added  255.fixed  257.fixed  266.housekeeping  272.fixed  274.added  277.fixed  (+89 more)
development/: Dockerfile  Dockerfile-fakenos  dev.env  development.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.fakenos.yml  docker-compose.mysql.yml  docker-compose.yml  nautobot_config.py  towncrier_template.j2
docs/: requirements.txt
docs/admin/: admin_install.md  admin_uninstall.md  admin_upgrade.md  compatibility_matrix.md  index.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_1.2.md  version_2.0.md  version_3.0.md  version_4.0.md  version_4.1.md  version_4.2.md  version_4.3.md  version_4.4.md  version_5.0.md  version_5.1.md  version_5.2.md  version_5.3.md  version_5.4.md
docs/dev/: arch_decision.md  contributing.md  custom_command_mapper_per_platform.md  dev_contributing.md  dev_environment.md  dev_extending.md  dev_onboarding_extensions.md  extending.md  index.md  onboarding_extensions.md  release_checklist.md
docs/dev/code_reference/: api.md  index.md  models.md  package.md
docs/examples/: example_ios_set_device_role.py
docs/onboarding-extensions/: onboarding_extensions.md
docs/release-notes/: version-1.0.md  version-1.1.md
docs/user/: app_detailed_design.md  app_external_interactions.md  app_faq.md  app_getting_started.md  app_overview.md  app_use_cases.md  app_use_cases_original.md  app_yaml_overrides.md  external_interactions.md  faq.md  index.md
examples/: example_ios_set_device_role.py
nautobot_device_onboarding/: __init__.py  admin.py  app-config-schema.json  associate_vrfs_to_prefixes.py  choices.py  constants.py  datasources.py  exceptions.py  filters.py  forms.py  helpers.py  jinja_filters.py  jobs.py  metrics.py  models.py  nautobot_keeper.py  navigation.py  netdev_keeper.py  onboard.py  tables.py  template_content.py  urls.py  views.py  worker.py
nautobot_device_onboarding/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_device_onboarding/command_mappers/: arista_eos.yml  aruba_aoscx.yml  aruba_os.yml  brocade_fastiron.yml  checkpoint_gaia.yml  cisco_ios.yml  cisco_nxos.yml  cisco_wlc.yml  cisco_wlc_ssh.yml  cisco_xe.yml  cisco_xr.yml  f5_tmsh.yml  hp_comware.yml  hp_procurve.yml  juniper_junos.yml  nokia_sros.yml  paloalto_panos.yml
nautobot_device_onboarding/diffsync/: __init__.py  mock_data.py
nautobot_device_onboarding/jobs/: __init__.py  network_importer.py
nautobot_device_onboarding/migrations/: 0001_initial.py  0001_squash__0001_0004_0005_0006.py  0001_squashed_all_noop.py  0002_create_onboardingdevice.py  0003_onboardingtask_label.py  0004_alter_onboardingtask_port.py  0004_migrate_site_to_location_part_1.py  0004_migrate_site_to_location_part_2.py  0004_migrate_site_to_location_part_3.py  0004_migrate_to_extras_role_part_1.py  0004_migrate_to_extras_role_part_2.py  0004_migrate_to_extras_role_part_3.py  0005_migrate_site_to_location_part_1.py  0005_migrate_site_to_location_part_2.py  0005_migrate_site_to_location_part_3.py  0006_auto_20230831_1923.py  0006_auto_20230925_1442.py  0006_nautobot_2_0.py  0006_update_model_fields_part_1.py  0006_update_model_fields_part_2.py  0006_update_model_fields_part_3.py  0007_alter_onboardingtask_ip_address.py  0008_alter_onboardingtask_options.py  0008_fix_multiple_leaf_nodes.py  0009_remove_models.py  0010_add_config_models.py  0010_discovered_devices.py  0010_discovered_models.py  0010_initial.py  0011_alter_onboardingconfigsyncdevices_options_and_more.py  0012_onboardingconfigsyncdevices_default_connectivity_test.py  0101_squashed.py
nautobot_device_onboarding/network_importer/: diff.py  exceptions.py  inventory.py  models.py  tasks.py  utils.py
nautobot_device_onboarding/nornir_plays/: command_getter.py  empty_inventory.py  formatter.py  inventory_creator.py  jinja_filters.py  logger.py  processor.py  schemas.py  transform.py
nautobot_device_onboarding/onboarding/: __init__.py  onboarding.py
nautobot_device_onboarding/onboarding_extensions/: __init__.py  ios.py
nautobot_device_onboarding/templates/: config_base.html  onboarding_config.html
nautobot_device_onboarding/tests/: __init__.py  test_api.py  test_basic.py  test_command_getter.py  test_diffsync_utils.py  test_empty_inventory.py  test_extract_and_process.py  test_filters.py  test_formatter.py  test_inventory_creator.py  test_ip_namespace_bug.py  test_jinja_filters.py  test_jobs.py  test_models.py  test_nautobot_keeper.py  test_netdev_keeper.py  test_onboarding.py  test_processor.py  test_sync_devices_adapters.py  test_sync_devices_models.py  test_sync_devices_network_adapter.py  test_sync_network_data_adapters.py  test_sync_vrf_to_prefix.py  test_transform.py  test_views.py  test_xr_jobs.py  utils.py
nautobot_device_onboarding/tmp/: juniper_junos.yml
nautobot_device_onboarding/utils/: credentials.py  diffsync_utils.py  formatter.py  helper.py  inventory_creator.py  jinja_filters.py
(+245 files in other folders)
